--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "ajv": "^6.5.4",
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "imagemin": "^5.3.1",
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.4.1",
-        "admin-lte": "^3.0.0-alpha.2"
+        "admin-lte": "^3.0.0-alpha.2",
+        "moment": "^2.22.2",
+        "vform": "^1.0.0"
     }
 }
