--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "@fortawesome/fontawesome-free": "^5.4.1",
         "admin-lte": "^3.0.0-alpha.2",
         "moment": "^2.22.2",
-        "vform": "^1.0.0"
+        "sweetalert": "^2.1.0",
+        "sweetalert2": "^7.28.5",
+        "vform": "^1.0.0",
+        "vue-progressbar": "^0.7.5"
     }
 }
